--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ h1{
     margin-bottom: 2rem;
 }
 
-input{
+.input-char{
     height: 3rem;
     width: 3.25rem;
     margin-bottom: 0.5rem;
@@ -61,9 +61,10 @@ input{
     box-shadow: 2px 2px 10px rgba(32, 31, 31, 0.189);
     text-align: center;
     font-size: 1.5rem;
+    text-transform: uppercase;
 }
 
-input:hover{
+input:focus{
     box-shadow: 5px 10px 20px rgba(98, 98, 9, 0.41);
 }
 
