--- a/style.css
+++ b/style.css
@@ -44,10 +44,21 @@ h1{
     cursor: pointer;
 }
 
+
+/* ==== MESSAGE ===== */
+
+.msg{
+    margin-top: 1rem;
+    margin-bottom: 1.5rem;
+    font-size: 1.25rem;
+    height: 1.5rem;
+    color: red;
+}
+
+
 /* ==== INPUT AREA ===== */
 
 .input-area{
-    margin-top: 3rem;
     margin-bottom: 2rem;
 }
 
@@ -64,9 +75,6 @@ h1{
     text-transform: uppercase;
 }
 
-input:focus{
-    box-shadow: 5px 10px 20px rgba(98, 98, 9, 0.41);
-}
 
 /* ===== KEYBOARD ===== */
 
