--- a/style.css
+++ b/style.css
@@ -71,15 +71,41 @@ h1{
     border-radius: 4px;
     box-shadow: 2px 2px 10px rgba(32, 31, 31, 0.189);
     text-align: center;
-    font-size: 1.5rem;
+    font-size: 2.25rem;
+    font-weight: 500;
+    color: rgb(80, 73, 73);
     text-transform: uppercase;
+}
+
+.input-char.green{
+    background-color: #35A535;
+    color: white;
+    border-color: #339433bd;
+    border-style: outset;
+    text-shadow:  2px 2px #383636;
+}
+
+.input-char.yellow{
+    background-color: #D7BF4A;
+    color: white;
+    border-color: #cab54bce;
+    border-style: outset;
+    text-shadow:  2px 2px #383636;
+}
+
+.input-char.grey{
+    background-color: #737373;
+    color: white;
+    border-color: #5f5f5fc0;
+    border-style: outset;
+    text-shadow:  2px 2px #383636;
 }
 
 
 /* ===== KEYBOARD ===== */
 
 #keyboard-cont{
-    line-height: 2.5rem;
+    line-height: 3rem;
 }
 
 .keyboard-button{
@@ -87,7 +113,9 @@ h1{
     padding: 4px 10px;
     margin: 0.05rem;
     text-transform: uppercase;
-    font-size: 1.15rem;
+    font-size: 1.25rem;
+    font-weight: 600;
+    color: rgba(48, 46, 46, 0.807);
     cursor: pointer;
     border: solid 2px rgba(48, 46, 46, 0.855);
     border-radius: 4px;
