--- a/style.css
+++ b/style.css
@@ -25,12 +25,47 @@ header{
     background-color: black;
 }
 
+header nav{
+    width: 0;
+    max-width: 100%;
+    position: fixed;
+    top: 80px;
+    left: 0;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    background-color: black;
+    color: white;
+    overflow-x: hidden;
+    z-index: 1;
+}
+
+header nav a{
+    display: block;
+    text-align: center;
+    font-size: 1.5rem;
+    cursor: pointer;
+    padding: 0.5rem 1rem;
+    transition: 0.3s ease;
+}
+
+header .menuBtn{
+    height: 2.5rem;
+    width: 2.5rem;
+    font-size: 1.5rem;
+    font-weight: 700;
+    cursor: pointer;
+}
+
+header .closeMenu{
+    display: none;
+}
+
 header h1{
     cursor: pointer;
     color: white;
 }
 
-.help-btn{
+header .help-btn{
     height: 3rem;
     width: 3rem;
     font-size: 2rem;
@@ -206,7 +241,23 @@ header h1{
         font-size: 1.5rem;
     }
 
-    .help-btn{
+    header nav{
+        top: 72px;
+    }
+
+    header nav a{
+        font-size: 1.25rem;
+    }
+
+    header .menuBtn{
+        height: 1.8rem;
+        width: 1.8rem;
+        font-size: 1.2rem;
+        font-weight: 700;
+        cursor: pointer;
+    }
+
+    header .help-btn{
         /* display: none; */
         height: 2.5rem;
         width: 2.5rem;
