--- a/style.css
+++ b/style.css
@@ -79,17 +79,6 @@ header .help-btn{
 }
 
 
-/* ==== MESSAGE ===== */
-
-.msg{
-    margin-top: 1rem;
-    margin-bottom: 1.5rem;
-    font-size: 1.25rem;
-    height: 1.5rem;
-    color: red;
-}
-
-
 /* ===== HELP SECTION ===== */
 
 .help{
@@ -147,6 +136,49 @@ header .help-btn{
 .help button:active{
     transform: translate(1px,1px);
     box-shadow: 0 1px rgba(99, 95, 95, 0.618);
+}
+
+/* ===== MAIN SECTION ===== */
+
+.main{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.main-head{
+    width: 80%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 1rem;
+    margin-bottom: 1.5rem;
+}
+
+/* ==== SCORE ===== */
+
+.main-head .scoreboard{
+    font-size: 1.5rem;
+    font-weight: 700;
+}
+
+.main-head .scoreboard .score{
+    font-size: 1.6rem;
+    font-weight: 800;
+}
+
+
+/* ==== MESSAGE ===== */
+
+.msg{
+    position: relative;
+    top: -3.5rem;
+    margin-bottom: -1.5rem;
+    font-size: 1.25rem;
+    height: 1.5rem;
+    color: red;
 }
 
 
@@ -264,10 +296,31 @@ header .help-btn{
         font-size: 1.5rem;
     }
 
+    .main{
+        min-width: 320px;
+    }
+
+    .main-head{
+        width: 100%;
+        padding: 0 2rem;
+        margin-bottom: 0.5rem;
+    }
+
+    .main-head .scoreboard{
+        font-size: 1.15rem;
+    }
+
+    .main-head .scoreboard .score{
+        font-size: 1.25rem;
+    }
+
     /* ===== MESSAGE ===== */
 
     .msg{
+        top: 0;
         margin-bottom: 1rem;
+        font-size: 1rem;
+        height: 1.2rem;
     }
 
     /* ===== HELP SECTION ===== */
