--- a/style.css
+++ b/style.css
@@ -79,9 +79,9 @@ header .help-btn{
 }
 
 
-/* ===== HELP SECTION ===== */
+/* ===== POP - UP ===== */
 
-.help{
+.pop-up{
     display: none;
     max-width: calc(100% - 2rem);
     width: 700px;
@@ -98,108 +98,62 @@ header .help-btn{
     z-index: 100;
 }
 
-.help h2{
+.pop-up ul{
+    list-style: none;
+    font-size: 1.35rem;
+    margin-bottom: 2rem;
+}
+
+.pop-up img{
+    max-width: calc(100% - 1rem);
+    width: 300px;
+    height: auto;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+}
+
+.pop-up button{
+    padding: 4px 24px;
+    font-size: 1.25rem;
+    font-weight: 600;
+    color: rgba(15, 15, 15, 0.807);
+    cursor: pointer;
+    border: solid 2px rgba(48, 46, 46, 0.855);
+    border-radius: 4px;
+    box-shadow: 2px 3px rgba(99, 95, 95, 0.618);
+    transition: 0.3s;
+}
+
+.pop-up button:hover{
+    transform: scale(1.02);
+}
+
+.pop-up button:active{
+    transform: translate(1px,1px);
+    box-shadow: 0 1px rgba(99, 95, 95, 0.618);
+}
+
+
+/* ===== HELP SECTION ===== */
+
+.pop-up.help h2{
     margin-bottom: 1.5rem;
     text-transform: uppercase;
 }
 
-.help ul{
-    list-style: none;
-    font-size: 1.35rem;
-    margin-bottom: 2rem;
-}
-
-.help img{
-    max-width: calc(100% - 1rem);
-    width: 300px;
-    height: auto;
-    margin-top: 0.5rem;
-    margin-bottom: 0.5rem;
-}
-
-.help button{
-    padding: 4px 24px;
-    font-size: 1.25rem;
-    font-weight: 600;
-    color: rgba(15, 15, 15, 0.807);
-    cursor: pointer;
-    border: solid 2px rgba(48, 46, 46, 0.855);
-    border-radius: 4px;
-    box-shadow: 2px 3px rgba(99, 95, 95, 0.618);
-    transition: 0.3s;
-}
-
-.help button:hover{
-    transform: scale(1.02);
-}
-
-.help button:active{
-    transform: translate(1px,1px);
-    box-shadow: 0 1px rgba(99, 95, 95, 0.618);
-}
-
-
 /* ===== SCORE RULES SECTION ===== */
 
-.scoreRules{
-    display: none;
-    max-width: calc(100% - 2rem);
-    width: 700px;
-    position: absolute;
-    top: 80px;
-    left: calc(50% - 1rem);
-    transform: translateX(-50%);
-    padding: 2rem 3rem;
-    margin: 1rem;
-    font-size: 1.25rem;
-    line-height: 2rem;
-    background-color: white;
-    box-shadow: 4px 4px 15px rgba(0, 0, 0, 0.687);
-    z-index: 100;
+.pop-up.scoreRules{
+    top: 120px;
 }
 
-.scoreRules h1{
+.pop-up.scoreRules h1{
     margin-bottom: 1.5rem;
 }
 
-.scoreRules ul{
-    list-style: none;
-    font-size: 1.35rem;
-    margin-bottom: 2rem;
-}
-
-.scoreRules ul li b{
+.pop-up.scoreRules ul li b{
     color: #fff;
     padding: 0 5px;
-}
-
-.scoreRules img{
-    max-width: calc(100% - 1rem);
-    width: 300px;
-    height: auto;
-    margin-top: 0.5rem;
-    margin-bottom: 0.5rem;
-}
-
-.scoreRules button{
-    padding: 4px 24px;
-    font-size: 1.25rem;
-    font-weight: 600;
-    color: rgba(15, 15, 15, 0.807);
-    cursor: pointer;
-    border: solid 2px rgba(48, 46, 46, 0.855);
-    border-radius: 4px;
-    box-shadow: 2px 3px rgba(99, 95, 95, 0.618);
-    transition: 0.3s;
-}
-
-.scoreRules button:hover{
-    transform: scale(1.02);
-}
-
-.scoreRules button:active{
-    transform: translate(1px,1px);
-    box-shadow: 0 1px rgba(99, 95, 95, 0.618);
 }
 
 
@@ -388,61 +342,41 @@ header .help-btn{
         height: 1.2rem;
     }
 
+    /* ==== POP - UP ==== */
+
+    .pop-up{
+        margin: 10px;
+        width: calc(100% - 20px);
+        padding: 2rem 1rem;
+        top: 60px;
+        left: calc(50% - 10px);
+        font-size: 1.05rem;
+        line-height: 1.5rem;
+    }
+
+    .pop-up ul{
+        font-size: 1.15rem;
+        margin-bottom: 1rem;
+    }
+    
+    .pop-up img{
+        max-width: 15rem;
+    }
+
+    .pop-up button{
+        font-size: 1.05rem;
+    }
+
     /* ===== HELP SECTION ===== */
 
-    .help{
-        margin: 10px;
-        width: calc(100% - 20px);
-        padding: 2rem 1rem;
-        top: 60px;
-        left: calc(50% - 10px);
-        font-size: 1.05rem;
-        line-height: 1.5rem;
-    }
-
-    .help h2{
+    .pop-up.help h2{
         margin-bottom: 1rem;
     }
     
-    .help ul{
-        font-size: 1.15rem;
+    /* ===== SCORE RULES ===== */
+
+    .pop-up.scoreRules h1{
         margin-bottom: 1rem;
-    }
-    
-    .help img{
-        max-width: 15rem;
-    }
-
-    .help button{
-        font-size: 1.05rem;
-    }
-
-
-    .scoreRules{
-        margin: 10px;
-        width: calc(100% - 20px);
-        padding: 2rem 1rem;
-        top: 60px;
-        left: calc(50% - 10px);
-        font-size: 1.05rem;
-        line-height: 1.5rem;
-    }
-
-    .scoreRules h1{
-        margin-bottom: 1rem;
-    }
-    
-    .scoreRules ul{
-        font-size: 1.15rem;
-        margin-bottom: 1rem;
-    }
-    
-    .scoreRules img{
-        max-width: 15rem;
-    }
-
-    .scoreRules button{
-        font-size: 1.05rem;
     }
 
     /* ===== INPUT AREA ===== */
