--- a/style.css
+++ b/style.css
@@ -138,6 +138,24 @@ header .help-btn{
 }
 
 
+/* ===== RESULT ===== */
+
+.pop-up.result img{
+    height: 200px;
+    width: 200px;
+}
+
+.pop-up.result p{
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+}
+
+.pop-up.result button{
+    margin-top: 1.5rem;
+    padding: 10px 24px;
+}
+
+
 /* ===== HELP SECTION ===== */
 
 .pop-up.help h2{
