--- a/style.css
+++ b/style.css
@@ -21,36 +21,53 @@ header{
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem 4rem;
+    padding: 1rem 2rem;
     background-color: black;
 }
 
 header nav{
+    height: 100%;
     width: 0;
     max-width: 100%;
     position: fixed;
     top: 80px;
     left: 0;
-    padding-top: 0.5rem;
+    padding-top: 1.5rem;
     padding-bottom: 0.5rem;
     background-color: black;
     color: white;
     overflow-x: hidden;
+    transition: 0.5s ease;
     z-index: 1;
 }
 
 header nav a{
     display: block;
     text-align: center;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     cursor: pointer;
-    padding: 0.5rem 1rem;
-    transition: 0.3s ease;
+    padding: 0.75rem 1rem;
+    transition: 0.5s ease;
 }
 
 header nav a:hover{
     color: yellow;
-    transform: scale(1.1);
+    transform: scale(1.05);
+}
+
+header nav a:after{
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 30%;
+    height: 3px;
+    background-color: yellow;
+    border-radius: 5px 5px 0 0;
+    transition: 0.5s ease;
+}
+
+header nav a:hover::after{
+    width: 40%;
 }
 
 header .menuBtn{
@@ -58,10 +75,10 @@ header .menuBtn{
     width: 2.5rem;
     font-size: 1.65rem;
     font-weight: 700;
-    cursor: pointer;
-    transition: 0.5s ease;
     background-color: #383636;
     color: white;
+    cursor: pointer;
+    transition: 0.5s ease;
 }
 
 header .menuBtn:hover{
@@ -71,13 +88,14 @@ header .menuBtn:hover{
 }
 
 header .closeMenu{
-    transition: 0.3s ease;
+    transition: 0.5s ease;
     display: none;
 }
 
 header img{
     height: 46px;
     width: auto;
+    transition: 0.5s ease;
 }
 
 header .help-btn{
@@ -380,11 +398,12 @@ header .help-btn:hover{
     }
 
     header nav{
-        top: 68px;
+        top: 60px;
+        max-width: 150px;
     }
 
     header nav a{
-        font-size: 1.25rem;
+        font-size: 1rem;
     }
 
     header .menuBtn{
