--- a/style.css
+++ b/style.css
@@ -45,8 +45,10 @@ header nav a{
     display: block;
     text-align: center;
     font-size: 1.3rem;
+    color: white;
     cursor: pointer;
     padding: 0.75rem 1rem;
+    text-decoration: none;
     transition: 0.5s ease;
 }
 
@@ -68,6 +70,34 @@ header nav a:after{
 
 header nav a:hover::after{
     width: 40%;
+}
+
+header nav span{
+    position: relative;
+    left: 50px;
+}
+
+header nav .showLevels{
+    display: none;
+    background-color: #151515;
+}
+
+header nav .showLevels a{
+    font-size: 1.2rem;
+    color: rgb(226, 223, 223);
+}
+
+header nav .showLevels a:hover{
+    color: yellow;
+    transform: scale(1.05);
+}
+
+header nav .showLevels a:active{
+    color: yellow;
+}
+
+header nav .showLevels a:after{
+    height: 2px;
 }
 
 header .menuBtn{
@@ -129,7 +159,7 @@ header .help-btn:hover{
     position: absolute;
     top: 50%;
     left: calc(50% - 1rem);
-    transform: translate(-50%, -60%);
+    transform: translate(-50%, -50%);
     padding: 2rem 3rem;
     margin: 1rem;
     font-size: 1.25rem;
@@ -214,28 +244,6 @@ header .help-btn:hover{
     color: #fff;
     padding: 0 5px;
 }
-
-/* ===== LEVELS SECTION ===== */
-
-.pop-up.level li{
-    cursor: pointer;
-    margin-bottom: 0.25rem;
-    transition: 0.5s ease;
-}
-
-.pop-up.level ul li a{
-    color: #fff;
-    padding: 2px 15px;
-}
-
-.pop-up.level ul li:hover{
-    transform: scale(1.1);
-}
-
-.pop-up.level p{
-    margin-bottom: 1rem;
-}
-
 
 /* ===== MAIN SECTION ===== */
 
@@ -404,8 +412,17 @@ header .help-btn:hover{
 
     header nav a{
         font-size: 1rem;
+        padding: 0.5rem 1rem;
     }
 
+    header nav span{
+        left: 30px;
+    }
+
+    header nav .showLevels a{
+        font-size: 0.95rem;
+    }
+    
     header .menuBtn{
         height: 1.8rem;
         width: 1.8rem;
