--- a/style.css
+++ b/style.css
@@ -79,7 +79,8 @@ header nav span{
 
 header nav .showLevels{
     display: none;
-    background-color: #151515;
+    background-color: #1c1a1a;
+    transition: 0.5s ease;
 }
 
 header nav .showLevels a{
@@ -412,7 +413,6 @@ header .help-btn:hover{
 
     header nav a{
         font-size: 1rem;
-        padding: 0.5rem 1rem;
     }
 
     header nav span{
